<resources>
    <string name="app_name">Proyecto5</string>
    <string name="appbar_title">Petagram</string>
    <string name="manu_opt_mainact_item1">Contacto</string>
    <string name="manu_opt_mainact_item2">Acerca De</string>
    <string name="v1_Tab1">Mascotas</string>
    <string name="v1_Tab2">Mi Mascotas</string>
    <string name="v1_fr2_tvName">Mi Mascota</string>
    <string name="v2_TextView1">ANDRES RODRIGUEZ</string>
    <string name="v2_TextView2">Ingeniero de Sistemas</string>
    <string name="v2_TextView3">Independiente</string>
    <string name="v2_TextView4">2020 - COLOMBIA</string>
    <string name="v4_address">Direccion de correo del destinatario</string>
    <string name="v4_name">Nombre</string>
    <string name="v4_mensaje">Mensaje</string>
    <string name="v4_asunto">Asunto</string>
    <string name="v4_boton">Enviar Mensaje</string>
    <string name="v4_suaddress">Su cuenta de correo de gmail</string>
    <string name="v4_supassword">Su password de email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>